# simple-gtest-cmake-example

./: CMakeLists.txt  README.md
include/hello/: hello.h
src/: main.cpp
src/hello/: hello.cpp
test/: helloTest.cpp
